Updated after 4/14 class